更新しました。

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,11 +7,19 @@
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   
   <link rel="stylesheet" href="./css/style.css">
-  <title>Document</title>
+  <title>Chinese rose</title>
 </head>
 <body>
-  
 
+  <header></header>
+
+
+  <main></main>
+
+
+  <footer></footer>
+
+  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./js/app.js"></script>
 </body>
